# jdbt

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
.ijwb/aspects/: cc_info.bzl  code_generator_info.bzl  intellij_info_bundled.bzl  java_info.bzl  scala_info.bzl
.opencode/skills/: ADOPTION.md
docs/: user-guide.md
plans/jdbt/: 00-requirements.md  10-implementation-plan.md  20-task-board.yaml  30-compatibility-matrix.md  40-test-strategy.md  50-completion-report.md
skills/: package_skill.py
skills/intellij-inspection-autofix/: SKILL.md
src/main/java/org/realityforge/jdbt/: BUILD.bazel  Main.java
src/main/java/org/realityforge/jdbt/cli/: BUILD.bazel  CommandRunner.java  DefaultCommandRunner.java  JdbtCommand.java  PasswordResolver.java  ProjectRuntimeLoader.java
src/main/java/org/realityforge/jdbt/config/: BUILD.bazel  ConfigException.java  DatabaseConfig.java  DefaultsConfig.java  FilterPropertyConfig.java  ImportConfig.java  JdbtProjectConfig.java  JdbtProjectConfigLoader.java  ModuleGroupConfig.java  YamlMapSupport.java
src/main/java/org/realityforge/jdbt/db/: BUILD.bazel  DatabaseConnection.java  DatabaseException.java  DatabaseMetadata.java  DbDriver.java  DbDriverFactory.java  NoOpDbDriver.java  PostgresDbDriver.java  QueryResult.java  SqlServerDbDriver.java  package-info.java
src/main/java/org/realityforge/jdbt/files/: ArtifactContent.java  BUILD.bazel  FileCollectionException.java  FileResolver.java  ZipArtifactContent.java  package-info.java
src/main/java/org/realityforge/jdbt/packaging/: BUILD.bazel  DatabaseDataPackager.java  DeterministicZipPackager.java  package-info.java
src/main/java/org/realityforge/jdbt/repository/: BUILD.bazel  RepositoryConfig.java  RepositoryConfigLoader.java  RepositoryConfigMerger.java
src/main/java/org/realityforge/jdbt/runtime/: BUILD.bazel  RuntimeDatabase.java  RuntimeDatabaseFactory.java  RuntimeEngine.java  RuntimeExecutionException.java  SqlServerImportAssertExpander.java  package-info.java
src/test/java/org/realityforge/jdbt/: BUILD.bazel  MainTest.java  package-info.java
src/test/java/org/realityforge/jdbt/cli/: BUILD.bazel  DefaultCommandRunnerTest.java  JdbtCommandTest.java  PasswordResolverTest.java  ProjectRuntimeLoaderTest.java  package-info.java
src/test/java/org/realityforge/jdbt/config/: BUILD.bazel  DefaultsConfigTest.java  JdbtProjectConfigLoaderTest.java  YamlMapSupportTest.java  package-info.java
src/test/java/org/realityforge/jdbt/db/: BUILD.bazel  DbDriverFactoryTest.java  PostgresDbDriverTest.java  SqlServerDbDriverTest.java
src/test/java/org/realityforge/jdbt/files/: BUILD.bazel  FileResolverTest.java  ZipArtifactContentTest.java
src/test/java/org/realityforge/jdbt/packaging/: BUILD.bazel  DatabaseDataPackagerTest.java  DeterministicZipPackagerTest.java
src/test/java/org/realityforge/jdbt/repository/: BUILD.bazel  RepositoryConfigLoaderTest.java  RepositoryConfigMergerTest.java  RepositoryConfigTest.java  package-info.java
src/test/java/org/realityforge/jdbt/runtime/: BUILD.bazel  RuntimeDatabaseFactoryTest.java  RuntimeDatabaseTest.java  RuntimeEngineTest.java  RuntimeFilesystemIntegrationTest.java  RuntimeH2IntegrationTest.java  SqlServerImportAssertExpanderTest.java
tools/: check.sh  java_format.sh  update_java_deps.sh
tools/java-format/: BUILD.bazel
