load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "repository",
    srcs = [
        "RepositoryConfig.java",
        "RepositoryConfigLoader.java",
        "RepositoryConfigMerger.java",
        "package-info.java",
    ],
    deps = ["//src/main/java/org/realityforge/jdbt/config"],
)
