load("//third_party/java:rules.bzl", "junit5_test")

package(default_visibility = ["//visibility:public"])

junit5_test(
    name = "runtime_tests",
    srcs = [
        "RuntimeDatabaseFactoryTest.java",
        "RuntimeDatabaseTest.java",
        "RuntimeEngineTest.java",
        "RuntimeFilesystemIntegrationTest.java",
        "RuntimeH2IntegrationTest.java",
        "SqlServerImportAssertExpanderTest.java",
        "package-info.java",
    ],
    test_package = "org.realityforge.jdbt.runtime",
    deps = [
        "//src/main/java/org/realityforge/jdbt/config",
        "//src/main/java/org/realityforge/jdbt/db",
        "//src/main/java/org/realityforge/jdbt/files",
        "//src/main/java/org/realityforge/jdbt/repository",
        "//src/main/java/org/realityforge/jdbt/runtime",
        "//third_party/java:assertj_core",
        "//third_party/java:h2",
    ],
)
